#dev UI cambios

--- a/public/css/core.css
+++ b/public/css/core.css
@@ -1,6 +1,9 @@
 body {
     padding-top: 70px;
     background-color: #f9f9f9;
+    font-family: 'Oxygen',sans-serif;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 .navbar-brand {
@@ -33,6 +36,7 @@ body {
 }
 .navbar-default .navbar-nav > li > a {
     color: #3e3e3e;
+    font-size: 14px;
 }
 .navbar-default .navbar-nav > li.iniciar-sesion > a {
     color: #cb1d2c;
@@ -168,6 +172,7 @@ i.fa-facebook {
 }
 .card .caption > .card-title a {
     color: #3e3e3e;
+    font-weight: 600;
 }
 .card .caption > .card-title a:hover,
 .card .caption > .card-title a:focus {
@@ -180,6 +185,39 @@ i.fa-facebook {
     font-weight: 400;
     line-height: 1.5;
     color: rgba(0,0,0,0.87);
+}
+
+.thumbnail .progress {
+    height: 5px;
+}
+.thumbnail .progress .progress-bar {
+    background: #37abf2;
+}
+.thumbnail-card-art {
+    display: block;
+    width: 100%;
+    position: relative;
+}
+.card-art{
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+}
+.caption p {
+    height: 50px;
+    overflow: hidden;
+}
+.caption span {
+    position: relative;
+    margin-top: -5px;
+    margin-bottom: 5px;
+    display: block;
+}
+.progress-content {
+    width: 100%;
+    display: block;
+    position: relative;
+    height: 15px;
 }
 @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
