--- a/public/css/core.css
+++ b/public/css/core.css
@@ -1,6 +1,6 @@
 body {
     padding-top: 70px;
-    background-color: #f9f9f9;
+    background-color: #ececec;
     font-family: 'Oxygen',sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -156,8 +156,8 @@ i.fa-facebook {
 */
 .thumbnail.card {
     padding: 0px;
-    box-shadow: 0 2px 3px rgba(0,0,0,.05);
-    margin-bottom: 1.25rem;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+    margin-bottom: 30px;
     background-color: #fff;
     border: 1px solid #eee;
     border-radius: 3px;
