--- a/public/css/core.css
+++ b/public/css/core.css
@@ -1,7 +1,7 @@
 body {
     padding-top: 70px;
     background-color: #ececec;
-    font-family: 'Oxygen',sans-serif;
+    font-family: 'Lato', sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
 }
@@ -36,7 +36,7 @@ body {
 }
 .navbar-default .navbar-nav > li > a {
     color: #3e3e3e;
-    font-size: 14px;
+    font-size: 15px;
 }
 .navbar-default .navbar-nav > li.iniciar-sesion > a {
     color: #cb1d2c;
@@ -193,11 +193,8 @@ i.fa-twitter {
     color: #cb1d2c;
 }
 .card p {
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
     color: rgba(0,0,0,0.87);
 }
 
