#dev UI modulos curso

--- a/public/css/core.css
+++ b/public/css/core.css
@@ -165,6 +165,9 @@ i.fa-twitter {
     color: #fff!important;
     background: #1dcaff!important;
 }
+th {
+    vertical-align: middle;
+}
 /*
 * Thumbnail card
 */
